--- a/style.css
+++ b/style.css
@@ -1,4 +1,31 @@
+p {
+    font-family: verdana;
+    font-size: 21px;
+    color: gray;
+    display: block;
+}
 body {
     font-family: verdana;
     background-color: black;
+    text-align: center;
+}
+.footer {
+    text-align: right;
+}
+.coming-soon {
+    color: aquamarine;
+    font-size: 16px;
+}
+h1 {
+    font-family: verdana;
+    font-weight: normal;
+    font-size: 50px;
+    color: white;
+    text-align: center;
+}
+h2 {
+    font-family: verdana;
+    font-size: 42px;
+    font-weight: 300;
+    color: white;
 }
